--- a/website/home.html
+++ b/website/home.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
 <html>
 	<head>
-        <link rel="stylesheet" href="bootstrap-4.1.3/css/bootstrap.min.css">
+          <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+          <link rel="stylesheet" href="bootstrap-4.1.3/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="bootstrap-4.1.3/js/bootstrap.min.js"></script>
+        
 	</head>
     <style>
        .navbar{
@@ -25,25 +31,132 @@
         .nav-pills .nav-link.active, .nav-pills .show>.nav-link{
             background-color: #000;
         }
+        #context{
+            margin:2%;
+            border:1px solid #000;
+            border-radius: 15px;
+        }
+        #context-head{
+           margin:2%;
+        }
+        .row{
+            padding:1%;
+        }
+        #grey{
+            background-color:#999;
+        }
+        .navbar-toggler-icon{
+               background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,255,255,1)' stroke-width='3' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+        }
+        .navbar-toggler-icon:hover{
+            background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(0,0,0,1)' stroke-width='3' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+        }
+        .container{
+            margin-top:2%;
+        }
     </style>
 	<body>
-<nav class="navbar navbar-expand-lg">
+<nav class="navbar navbar-expand-lg fixed-top">
   <a class="navbar-brand" href="#">
     <img src="img/logo.svg" width="30" height="30" class="d-inline-block align-top" alt=""> Tradingcentre
   </a>
-<div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="nav nav-pills">
+<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navb" aria-controls="navb" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+<div class="collapse navbar-collapse" id="navb">
+    <ul class="nav nav-pills mr-auto">
       <li class="nav-item">
-        <a class="nav-link active" href="#">Home</a>
+        <a class="nav-link" href="javascript:void(0)"><i class="fa fa-home">Home</i></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Journal</a>
+        <a class="nav-link" href="javascript:void(0)">Journal</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Datacenter</a>
+        <a class="nav-link" href="javascript:void(0)">Datacenter</a>
       </li>
     </ul>
-    </div>
+    <form class="form-inline my-2 my-lg-0">
+      <input class="form-control mr-sm-2" type="text" placeholder="Search">
+      <button class="btn btn-success my-2 my-sm-0" type="button">Search</button>
+    </form>
+  </div>
 </nav>
+<div class="container">
+    <div class="row">
+        <div id="context" class="col-md-7 col-sm-12 col-xs-12">
+Lorem Ipsum is slechts een proeftekst uit het drukkerij- en zetterijwezen. Lorem Ipsum is de standaard proeftekst in deze bedrijfstak sinds de 16e eeuw, toen een onbekende drukker een zethaak met letters nam en ze door elkaar husselde om een font-catalogus te maken. Het heeft niet alleen vijf eeuwen overleefd maar is ook, vrijwel onveranderd, overgenomen in elektronische letterzetting. Het is in de jaren '60 populair geworden met de introductie van Letraset vellen met Lorem Ipsum passages en meer recentelijk door desktop publishing software zoals Aldus PageMaker die versies van Lorem Ipsum bevatten.
+        </div>
+        <div class="col-md-4 col-sm-12 col-xs-12" id="context-head">
+            <div class="row">
+                <div id="context" class="col-sm-12">
+                    <div class="row">
+                    <h2>TOP AUTHORS</h2>
+                    </div>
+                    <div class="row">
+                    <div class="col-sm-3">adfgs</div>
+                    <div class="col-sm-3">1200</div>
+                    <div class="col-sm-3"></div>
+                    <div class="col-sm-3">*****</div>
+                    </div>
+                    <div class="row" id="grey">
+                    <div class="col-sm-3">sfg</div>
+                    <div class="col-sm-3">1200</div>
+                    <div class="col-sm-3"></div>
+                    <div class="col-sm-3">*****</div>
+                    </div>
+                    <div class="row">
+                    <div class="col-sm-3">sgs</div>
+                    <div class="col-sm-3">5500</div>
+                    <div class="col-sm-3"></div>
+                    <div class="col-sm-3">*****</div>
+                    </div>
+                    <div class="row" id="grey">
+                    <div class="col-sm-3">sfdg</div>
+                    <div class="col-sm-3">1200</div>
+                    <div class="col-sm-3"></div>
+                    <div class="col-sm-3">*****</div>
+                    </div>
+                    <div class="row">
+                    <div class="col-sm-3">sfdg</div>
+                    <div class="col-sm-3">1200</div>
+                    <div class="col-sm-3"></div>
+                    <div class="col-sm-3">*****</div>
+                    </div>
+                    </div>
+            </div>
+            <div class="row">
+                 <div id="context" class="col-sm-12">
+                     <div class="row"><h2>NEWS FEED</h2></div>
+                        <div class="row">
+                            <div class="row">
+                            <div class="col-sm-1"></div>
+                            <div class="col-sm-2">user</div>
+                            <div class="col-sm-2">@binance</div>
+                            <div class="col-sm-1"></div>
+                            <div class="col-sm-2">8u</div>
+                            <div class="col-sm-1"></div>
+                            </div>
+                            <div class="row">
+                            <div class="col-sm-12">Lorem Ipsum is slechts een proeftekst uit het drukkerij- en zetterijwezen. Lorem Ipsum is de standaard proeftekst in deze bedrijfstak sinds de 16e eeuw, toen een onbekende drukker een zethaak met letters nam en ze door elkaar husselde om een font-catalogus te maken.</div>
+                            </div>
+                        </div>
+                                             <div class="row">
+                            <div class="row">
+                            <div class="col-sm-1"></div>
+                            <div class="col-sm-2">user</div>
+                            <div class="col-sm-2">@binance</div>
+                            <div class="col-sm-1"></div>
+                            <div class="col-sm-2">8u</div>
+                            <div class="col-sm-1"></div>
+                            </div>
+                            <div class="row">
+                            <div class="col-sm-12">Lorem Ipsum is slechts een proeftekst uit het drukkerij- en zetterijwezen. Lorem Ipsum is de standaard proeftekst in deze bedrijfstak sinds de 16e eeuw, toen een onbekende drukker een zethaak met letters nam en ze door elkaar husselde om een font-catalogus te maken.</div>
+                            </div>
+                        </div>
+                    </div>   
+            </div>
+        </div>
+    </div>        
+</div>
 	</body>
 </html>
