--- a/website/Index.html
+++ b/website/Index.html
@@ -8,6 +8,32 @@
 	    <script src="bootstrap-4.1.3/js/bootstrap.min.js" type="text/javascript"></script>
 	</head>
 	<body>
+		<header>
+			
+		</header>
+		<div class="cookieBanner">
+			<div class="button" id="BAllowCookies">Allow cookies</div>
+		</div>
+
+		<h1>TradingCenter</h1>
+		<h2>Your center place for ideas and trading data</h2>
+		<div class="container">
+			<div class="row justify-content-around">
+				 <div class="col-4">
+      				<a href="">
+      					<img src="img/gears.png" style="width: 128px; height: 128px;" alt="test">
+      				</a>
+    			</div>
+    			<div class="col-4">
+      				<a href="">
+      					<img src="img/gears.png" style="width: 128px; height: 128px;" alt="test">
+      				</a>
+    			</div>
+			</div>
+		</div>
+		<div style="height: 100%;"></div>
+		<!--buttons modal demo-->
+		
 		<div class="button" id="BLogin">
 		 	Login
 		</div>
@@ -17,6 +43,7 @@
 		<div class="button" id="BForgotPassword">
 			Forgot password
 		</div>
+		
 		<!--Login modal-->
 		<div class="modal fade" id="MLogin" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
 	  		<div class="modal-dialog" role="document">
@@ -36,6 +63,9 @@
 		      				Password
 		      				<br>
 		      				<input type="password" name="password" placeholder="Password" id="MLoginIPassword">
+		      				<br>
+		      				<input type="checkbox" name="remimberMe">
+		      				Remember me
 		      				<p id="MLoginBForgotPassword">Forgot password?</p>
 		      				<p id="MLoginBSingUp">don't have an account?</p>
 		      			</form>
@@ -74,7 +104,7 @@
 		      				Email
 		      				<br>
 		      				<input type="text" name="password" placeholder="Email" id="MSignUpIEmail" autocomplete="off">
-		      				<p id="MSingUpBLogin"></p>
+		      				<p id="MSingUpBLogin">already have an account?</p>
 		      			</form>
 		      		</div>
 		      		<div class="modal-footer">
