cookie test xampp

--- a/website/Index.html
+++ b/website/Index.html
@@ -11,7 +11,7 @@
 		<header>
 			
 		</header>
-		<div class="cookieBanner">
+		<div id="cookieBanner">
 			<div class="button" id="BAllowCookies">Allow cookies</div>
 		</div>
 
