--- a/website/home.html
+++ b/website/home.html
@@ -60,6 +60,10 @@
         .checked{
             color:#ff8c1a;
         }
+        footer{
+            background-color: #4B77BE;
+            margin-top: 1%;
+        }
     </style>
 	<body>
 <nav class="navbar navbar-expand-lg fixed-top">
@@ -153,19 +157,19 @@ Lorem Ipsum is slechts een proeftekst uit het drukkerij- en zetterijwezen. Lorem
                           </thead>
                           <tbody>
                             <tr>
-                                <td><img class="img-person" src="img/person.svg"></td><td><a href="Index.html">Mark</a></td><td>28 Augustus 2018</td><td><a class="btn btn-primary" data-toggle="collapse" href="#newsitem" role="button" aria-expanded="false" aria-controls="newsitem">V</a></td>
+                                <td><img class="img-person" src="img/person.svg"></td><td><a href="Index.html">Mark</a></td><td>28 Augustus 2018, 23:55</td><td><a class="btn btn-primary" data-toggle="collapse" href="#newsitem" role="button" aria-expanded="false" aria-controls="newsitem">V</a></td>
                             </tr>
                             <tr>
                                 <td colspan="4" id="newsitem">The US 2018 midterm elections are approaching and can have a significant impact on the United States political landscape. Democrats are more trade-friendly, and if they win, they will try to block trade tariffs. On the other hand, Republicans favor more tariffs, lower taxes, and a stronger US Dollar. </td>
                             </tr>
                             <tr>
-                                <td><img class="img-person" src="img/person.svg"></td><td><a href="Index.html">Mark</a></td><td>28 Augustus 2018</td><td><a class="btn btn-primary" data-toggle="collapse" href="#newsitem1" role="button" aria-expanded="false" aria-controls="newsitem1">V</a></td>
+                                <td><img class="img-person" src="img/person.svg"></td><td><a href="Index.html">Mark</a></td><td>28 Augustus 2018, 22:23</td><td><a class="btn btn-primary" data-toggle="collapse" href="#newsitem1" role="button" aria-expanded="false" aria-controls="newsitem1">V</a></td>
                             </tr>
                             <tr>
                                 <td colspan="4" id="newsitem1">The US 2018 midterm elections are approaching and can have a significant impact on the United States political landscape. Democrats are more trade-friendly, and if they win, they will try to block trade tariffs. On the other hand, Republicans favor more tariffs, lower taxes, and a stronger US Dollar. </td>
                             </tr>
                                                           <tr>
-                                <td><img class="img-person" src="img/person.svg"></td><td><a href="Index.html">Mark</a></td><td>28 Augustus 2018</td><td><a class="btn btn-primary" data-toggle="collapse" href="#newsitem2" role="button" aria-expanded="false" aria-controls="newsitem2">V</a></td>
+                                <td><img class="img-person" src="img/person.svg"></td><td><a href="Index.html">Mark</a></td><td>28 Augustus 2018, 15:10</td><td><a class="btn btn-primary" data-toggle="collapse" href="#newsitem2" role="button" aria-expanded="false" aria-controls="newsitem2">V</a></td>
                             </tr>
                             <tr>
                                 <td colspan="4" id="newsitem2">The US 2018 midterm elections are approaching and can have a significant impact on the United States political landscape. Democrats are more trade-friendly, and if they win, they will try to block trade tariffs. On the other hand, Republicans favor more tariffs, lower taxes, and a stronger US Dollar. </td>
@@ -177,5 +181,11 @@ Lorem Ipsum is slechts een proeftekst uit het drukkerij- en zetterijwezen. Lorem
         </div>
     </div>        
 </div>
+        
+<footer>
+<div class="container">
+    
+</div>
+</footer>
 	</body>
 </html>
