--- a/website/home.html
+++ b/website/home.html
@@ -63,6 +63,11 @@
         footer{
             background-color: #4B77BE;
             margin-top: 1%;
+            color:#fff;
+        }
+        #footertext{
+           margin:0 auto;
+            text-align: center;
         }
     </style>
 	<body>
@@ -184,7 +189,40 @@ Lorem Ipsum is slechts een proeftekst uit het drukkerij- en zetterijwezen. Lorem
         
 <footer>
 <div class="container">
-    
+    <div class="row" id="footertext">
+        <div class="col-md-4 col-sm-4 col-xs-4">
+            <h2>dsddds</h2>
+        <ul>
+            <li><a href="">ddddd</a></li>
+<li><a href="">ddddd</a></li>
+            <li><a href="">ddddd</a></li>
+            <li><a href="">ddddd</a></li>
+        </ul>
+        </div>
+        <div class="col-md-4 col-sm-4 col-xs-4">
+            <h2>dsddds</h2>
+                <ul>
+            <li><a href="">ddddd</a></li>
+<li><a href="">ddddd</a></li>
+            <li><a href="">ddddd</a></li>
+            <li><a href="">ddddd</a></li>
+        </ul>
+        </div>
+        <div class="col-md-4 col-sm-4 col-xs-4">
+            <h2>dsddds</h2>
+                <ul>
+            <li><a href="">ddddd</a></li>
+<li><a href="">ddddd</a></li>
+            <li><a href="">ddddd</a></li>
+            <li><a href="">ddddd</a></li>
+        </ul>
+        </div>
+    </div>
+    <div class="row" id="footertext">
+        <div class="col-md-12 col-sm-12 col-xs-12">
+        Tradingcenter&copy;2019 
+        </div>
+    </div>
 </div>
 </footer>
 	</body>
