update journal and home

--- a/website/home.html
+++ b/website/home.html
@@ -68,7 +68,17 @@
         #footertext{
            margin:0 auto;
             text-align: center;
+            padding:2%;
         }
+        .footer-ul li{
+            list-style: none;
+            text-decoration: none;
+        }
+        .footer-ul li a{
+            color: #fff;
+        }
+        
+
     </style>
 	<body>
 <nav class="navbar navbar-expand-lg fixed-top">
@@ -81,10 +91,10 @@
 <div class="collapse navbar-collapse" id="navb">
     <ul class="nav nav-pills mr-auto">
       <li class="nav-item">
-        <a class="nav-link" href="javascript:void(0)">Home</a>
+        <a class="nav-link" href="home.html">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="javascript:void(0)">Journal</a>
+        <a class="nav-link" href="journal.html">Journal</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="javascript:void(0)">Datacenter</a>
@@ -190,35 +200,35 @@ Lorem Ipsum is slechts een proeftekst uit het drukkerij- en zetterijwezen. Lorem
 <footer>
 <div class="container">
     <div class="row" id="footertext">
-        <div class="col-md-4 col-sm-4 col-xs-4">
-            <h2>dsddds</h2>
-        <ul>
-            <li><a href="">ddddd</a></li>
-<li><a href="">ddddd</a></li>
-            <li><a href="">ddddd</a></li>
-            <li><a href="">ddddd</a></li>
+            <div class="col-md-4 col-sm-12 col-xs-12">
+        <ul class="footer-ul">
+            <li><h2>ABOUT US</h2></li>
+            <li><a href="">about us</a></li>
+            <li><a href="">contact</a></li>
+            <li><a href="">privacy police</a></li>
+            <li><a href="">security</a></li>
+            <li><a href="">FAQ</a></li>
+            <li><a href="">api</a></li>
         </ul>
         </div>
-        <div class="col-md-4 col-sm-4 col-xs-4">
-            <h2>dsddds</h2>
-                <ul>
-            <li><a href="">ddddd</a></li>
-<li><a href="">ddddd</a></li>
-            <li><a href="">ddddd</a></li>
-            <li><a href="">ddddd</a></li>
+        <div class="col-md-4 col-sm-12 col-xs-12">
+        <ul class="footer-ul">
+            <li><h2>ACCOUNT</h2></li>
+            <li><a href="">login</a></li>
+            <li><a href="">sign up</a></li>
         </ul>
         </div>
-        <div class="col-md-4 col-sm-4 col-xs-4">
-            <h2>dsddds</h2>
-                <ul>
-            <li><a href="">ddddd</a></li>
-<li><a href="">ddddd</a></li>
-            <li><a href="">ddddd</a></li>
-            <li><a href="">ddddd</a></li>
+        <div class="col-md-4 col-sm-12 col-xs-12">
+        <ul class="footer-ul">
+            <li><h2>LINKS</h2></li>
+            <li><a href="">index</a></li>
+            <li><a href="">home</a></li>
+            <li><a href="">journal</a></li>
+            <li><a href="">datacenter</a></li>
         </ul>
         </div>
     </div>
-    <div class="row" id="footertext">
+    <div class="row" id="footertext" style="border-top:2px solid #fff;">
         <div class="col-md-12 col-sm-12 col-xs-12">
         Tradingcenter&copy;2019 
         </div>
