--- a/website/Index.html
+++ b/website/Index.html
@@ -4,19 +4,45 @@
 		<link rel="stylesheet" type="text/css" href="bootstrap-4.1.3/css/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="css/main.css">
 		<link rel="stylesheet" type="text/css" href="css/index.css">
+		<link rel="stylesheet" type="text/css" href="css/header.css">
 		<script src="js/jquery.js" type="text/javascript"></script>
 	    <script src="bootstrap-4.1.3/js/bootstrap.min.js" type="text/javascript"></script>
 	</head>
 	<body>
-		<header>
-			
-		</header>
+		
 		<div id="cookieBanner">
 			<div class="button" id="BAllowCookies">Allow cookies</div>
 		</div>
 
-		<h1>TradingCenter</h1>
-		<h2>Your center place for ideas and trading data</h2>
+		<nav class="navbar navbar-expand-lg fixed-top">
+	  		<a class="navbar-brand" href="#">
+		    	<img src="img/logo.svg" width="30" height="30" class="d-inline-block align-top" alt=""> Tradingcentre
+		  	</a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navb" aria-controls="navb" aria-expanded="false" aria-label="Toggle navigation">
+	        	<span class="navbar-toggler-icon"></span>
+	      	</button>
+			<div class="collapse navbar-collapse" id="navb">
+		    	<ul class="nav nav-pills mr-auto">
+		      		<li class="nav-item">
+		        		<a class="nav-link" href="home.html">Home</a>
+		      		</li>
+		      		<li class="nav-item">
+		        		<a class="nav-link" href="journal.html">Journal</a>
+		      		</li>
+		      		<li class="nav-item">
+			        	<a class="nav-link" href="javascript:void(0)">Datacenter</a>
+	      			</li>
+		    	</ul>
+		    	<form class="form-inline my-2 my-lg-0">
+		      		<input class="form-control mr-sm-2" type="text" placeholder="Search">
+		      		<button class="btn btn-success my-2 my-sm-0" type="button">Search</button>
+		    	</form>
+		  	</div>
+		</nav>
+		<div>
+			<h1>TradingCenter</h1>
+			<h2>Your center place for ideas and trading data</h2>
+		</div>
 		<div class="container">
 			<div class="row justify-content-around">
 				 <div class="col-4">
@@ -31,7 +57,6 @@
     			</div>
 			</div>
 		</div>
-		<div style="height: 100%;"></div>
 		<!--buttons modal demo-->
 		
 		<div class="button" id="BLogin">
@@ -64,7 +89,7 @@
 		      				<br>
 		      				<input type="password" name="password" placeholder="Password" id="MLoginIPassword">
 		      				<br>
-		      				<input type="checkbox" name="remimberMe">
+		      				<input type="checkbox" name="remimberMe" id="CBremimberMe">
 		      				Remember me
 		      				<p id="MLoginBForgotPassword">Forgot password?</p>
 		      				<p id="MLoginBSingUp">don't have an account?</p>
