kleinen aanpassing van de header

--- a/website/Index.html
+++ b/website/Index.html
@@ -40,7 +40,7 @@
 		  	</div>
 		</nav>
 		<div>
-			<h1>TradingCenter</h1>
+			<h1 class="title">TradingCenter</h1>
 			<h2>Your center place for ideas and trading data</h2>
 		</div>
 		<div class="container">
