search JSON test

--- a/website/Index.html
+++ b/website/Index.html
@@ -33,12 +33,13 @@
 			        	<a class="nav-link" href="javascript:void(0)">Datacenter</a>
 	      			</li>
 		    	</ul>
-		    	<form class="form-inline my-2 my-lg-0">
+		    	<form  action="search.html"class="form-inline my-2 my-lg-0">
 		      		<input class="form-control mr-sm-2" type="text" placeholder="Search">
 		      		<button class="btn btn-success my-2 my-sm-0" type="button">Search</button>
 		    	</form>
 		  	</div>
 		</nav>
+		
 		<div>
 			<h1 class="title">TradingCenter</h1>
 			<h2>Your center place for ideas and trading data</h2>
