--- a/website/Index.html
+++ b/website/Index.html
@@ -6,13 +6,12 @@
 		<link rel="stylesheet" type="text/css" href="css/index.css">
 		<link rel="stylesheet" type="text/css" href="css/header.css">
 		<script src="js/jquery.js" type="text/javascript"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	    <script src="bootstrap-4.1.3/js/bootstrap.min.js" type="text/javascript"></script>
 	</head>
 	<body>
 		
-		<div id="cookieBanner">
-			<div class="button" id="BAllowCookies">Allow cookies</div>
-		</div>
+		
 
 		<nav class="navbar navbar-expand-lg fixed-top">
 	  		<a class="navbar-brand" href="#">
@@ -33,33 +32,24 @@
 			        	<a class="nav-link" href="javascript:void(0)">Datacenter</a>
 	      			</li>
 		    	</ul>
-		    	<form  action="search.html"class="form-inline my-2 my-lg-0">
-		      		<input class="form-control mr-sm-2" type="text" placeholder="Search">
-		      		<button class="btn btn-success my-2 my-sm-0" type="button">Search</button>
+		    	<form class="form-inline my-2 my-lg-0">
+		      		<input class="form-control mr-sm-2" type="text" placeholder="Search" size="50">
+		      		<button class="btn btn-success my-2 my-sm-0" type="button" id="Bsearch">Search</button>
 		    	</form>
+		    	<ul class="nav nav-pills" id="rightButtonNav">
+		      		<!--
+		      		<li class="nav-item">
+		        		<a class="nav-link" id="BLogin">Login</a>
+		      		</li>
+		      		<li class="nav-item">
+		        		<a class="nav-link" id="BSignUp">Sign up</a>
+		      		</li>
+		      		-->
+		    	</ul>
 		  	</div>
 		</nav>
-		
-		<div>
-			<h1 class="title">TradingCenter</h1>
-			<h2>Your center place for ideas and trading data</h2>
-		</div>
-		<div class="container">
-			<div class="row justify-content-around">
-				 <div class="col-4">
-      				<a href="">
-      					<img src="img/gears.png" style="width: 128px; height: 128px;" alt="test">
-      				</a>
-    			</div>
-    			<div class="col-4">
-      				<a href="">
-      					<img src="img/gears.png" style="width: 128px; height: 128px;" alt="test">
-      				</a>
-    			</div>
-			</div>
-		</div>
 		<!--buttons modal demo-->
-		
+		<!--
 		<div class="button" id="BLogin">
 		 	Login
 		</div>
@@ -69,7 +59,7 @@
 		<div class="button" id="BForgotPassword">
 			Forgot password
 		</div>
-		
+		-->
 		<!--Login modal-->
 		<div class="modal fade" id="MLogin" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
 	  		<div class="modal-dialog" role="document">
@@ -81,20 +71,24 @@
 						</button>
 				    </div>
 		      		<div class="modal-body">
-		      			<form action="Home.html">
-		      				Login
-		      				<br>
-		      				<input type="text" name="username" placeholder="Username" id="MLoginIUsername" autocomplete="off">
-		      				<br>
-		      				Password
-		      				<br>
-		      				<input type="password" name="password" placeholder="Password" id="MLoginIPassword">
-		      				<br>
-		      				<input type="checkbox" name="remimberMe" id="CBremimberMe">
-		      				Remember me
-		      				<p id="MLoginBForgotPassword">Forgot password?</p>
-		      				<p id="MLoginBSingUp">don't have an account?</p>
-		      			</form>
+		      			<!--<form action="Home.html">-->
+	      				Login
+	      				<br>
+	      				<input type="text" name="username" placeholder="Username" id="MLoginIUsername" autocomplete="off">
+	      				<br>
+      					Email
+	      				<br>
+	      				<input type="text" name="email" placeholder="email" id="MLoginIEmail" autocomplete="off">
+	      				<br>
+	      				Password
+	      				<br>
+	      				<input type="password" name="password" placeholder="Password" id="MLoginIPassword">
+	      				<br>
+	      				<input type="checkbox" name="remimberMe" id="CBremimberMe">
+	      				Remember me
+	      				<p id="MLoginBForgotPassword">Forgot password?</p>
+	      				<p id="MLoginBSingUp">don't have an account?</p>
+		      			<!--</form>-->
 		      		</div>
 		      		<div class="modal-footer">
 		        		<button type="button" class="btn btn-primary" id="MLoginBLogin">Login</button>
@@ -168,6 +162,44 @@
 		    	</div>
   			</div>
 		</div>
+		<script src="js/header.js" type="text/javascript"></script>
+
+		<div id="cookieBanner">
+			<div class="button" id="BAllowCookies">Allow cookies</div>
+			GDPR info
+		</div>
+
+		<div>
+			<h1 class="title">TradingCenter</h1>
+			<h2>Your center place for ideas and trading data</h2>
+		</div>
+		<div class="container">
+			<div class="row justify-content-around">
+				 <div class="col-4">
+      				<a href="journal.html">
+      					<img src="img/gears.png" style="width: 128px; height: 128px;" alt="test">
+      					Journal
+      				</a>
+    			</div>
+    			<div class="col-4">
+      				<a href="datacenter.html">
+      					<img src="img/gears.png" style="width: 128px; height: 128px;" alt="test">
+      					Datacenter
+      				</a>
+    			</div>
+			</div>
+		</div>
 		<script src="js/login.js" type="text/javascript"></script>
+
+		
+		<!--
+		<div id="testa"></div>
+		<script>$(function(){
+			$("#testa").load("test2.html");
+		});
+		</script>
+		-->
+
+		<script src="js/test.js" type="text/javascript"></script>
 	</body>
 </html>
