login + sing up error handeling

--- a/website/journal.html
+++ b/website/journal.html
@@ -556,10 +556,10 @@
             <li><h2>ABOUT US</h2></li>
             <li><a href="">about us</a></li>
             <li><a href="">contact</a></li>
-            <li><a href="">privacy police</a></li>
+            <li><a href="">privacy policy</a></li>
             <li><a href="">security</a></li>
             <li><a href="">FAQ</a></li>
-            <li><a href="">api</a></li>
+            <li><a href="">API</a></li>
         </ul>
         </div>
         <div class="col-md-4 col-sm-12 col-xs-12">
@@ -581,7 +581,7 @@
     </div>
     <div class="row" id="footertext" style="border-top:2px solid #fff;">
         <div class="col-md-12 col-sm-12 col-xs-12">
-        Tradingcenter&copy;2019 
+        Tradingcenter &copy; 2018 
         </div>
     </div>
 </div>
