--- a/website/Index.html
+++ b/website/Index.html
@@ -10,12 +10,9 @@
 	    <script src="bootstrap-4.1.3/js/bootstrap.min.js" type="text/javascript"></script>
 	</head>
 	<body>
-		
-		
-
 		<nav class="navbar navbar-expand-lg fixed-top">
 	  		<a class="navbar-brand" href="#">
-		    	<img src="img/logo.svg" width="30" height="30" class="d-inline-block align-top" alt=""> Tradingcentre
+		    	<img src="img/logo.svg" width="30" height="30" class="d-inline-block align-top" alt=""> Tradingcenter
 		  	</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navb" aria-controls="navb" aria-expanded="false" aria-label="Toggle navigation">
 	        	<span class="navbar-toggler-icon"></span>
@@ -72,17 +69,16 @@
 				    </div>
 		      		<div class="modal-body">
 		      			<!--<form action="Home.html">-->
-	      				Login
-	      				<br>
+		      			<p class="modalParagraph modalErrorMsg" id="MLoginEMMain" style="display: none;"></p>
+		      			<p class="modalParagraph">Login</p>
 	      				<input type="text" name="username" placeholder="Username" id="MLoginIUsername" autocomplete="off">
-	      				<br>
-      					Email
-	      				<br>
+	      				<span class="modalErrorMsg" id="MLoginEMUsername"></span>
+	      				<p class="modalParagraph">Email</p>
 	      				<input type="text" name="email" placeholder="email" id="MLoginIEmail" autocomplete="off">
-	      				<br>
-	      				Password
-	      				<br>
+	      				<span class="modalErrorMsg" id="MLoginEMEmail"></span>
+	      				<p class="modalParagraph">Password</p>
 	      				<input type="password" name="password" placeholder="Password" id="MLoginIPassword">
+	      				<span class="modalErrorMsg" id="MLoginEMPassword"></span>
 	      				<br>
 	      				<input type="checkbox" name="remimberMe" id="CBremimberMe">
 	      				Remember me
@@ -108,24 +104,21 @@
 						</button>
 				    </div>
 		      		<div class="modal-body">
-		      			<form action="Home.html">
-		      				Login
-		      				<br>
+		      			<!-- <form action="Home.html"> -->
+		      				<p class="modalParagraph">Login</p>
 		      				<input type="text" name="username" placeholder="Username" id="MSignUpIUsername" autocomplete="off">
-		      				<br>
-		      				Password
-		      				<br>
+		      				<span class="modalErrorMsg" id="MSignUpEMUsername"></span>
+		      				<p class="modalParagraph">Password (between 4 and 20 characters)</p>
 		      				<input type="password" name="password" placeholder="Password" id="MSignUpIPassword">
-		      				<br>
-		      				Re-password
-		      				<br>
+		      				<span class="modalErrorMsg" id="MSignUpEMPassword"></span>
+		      				<p class="modalParagraph">Re-password</p>
 		      				<input type="password" name="password" placeholder="Re-password" id="MSignUpIRePassword">
-		      				<br>
-		      				Email
-		      				<br>
+		      				<span class="modalErrorMsg" id="MSignUpEMRePassword"></span>
+		      				<p class="modalParagraph">Email</p>
 		      				<input type="text" name="password" placeholder="Email" id="MSignUpIEmail" autocomplete="off">
+		      				<span class="modalErrorMsg" id="MSignUpEMEmail"></span>
 		      				<p id="MSingUpBLogin">already have an account?</p>
-		      			</form>
+		      			<!-- </form> -->
 		      		</div>
 		      		<div class="modal-footer">
 		        		<button type="button" class="btn btn-primary" id="MSignUpBSingUp">Login</button>
@@ -146,13 +139,12 @@
 				    </div>
 		      		<div class="modal-body">
 		      			<from action="home.html">
-		      				Username
-		      				<br>
+		      				<p class="modalParagraph">Username</p>
 		      				<input type="text" name="username" id="MForgotPasswordIUsername" placeholder="Username" autocomplete="off">
-		      				<br>
-		      				Email
-		      				<br>
+		      				<span class="modalErrorMsg"></span>
+							<p class="modalParagraph">Email</p>
 		      				<input type="text" name="email" id="MForgotPasswordIEmail" placeholder="Email" autocomplete="off">
+		      				<span class="modalErrorMsg"></span>
 		      			</from>
 		      		</div>
 		      		<div class="modal-footer">
