--- a/website/Index.html
+++ b/website/Index.html
@@ -20,10 +20,10 @@
 			<div class="collapse navbar-collapse" id="navb">
 		    	<ul class="nav nav-pills mr-auto">
 		      		<li class="nav-item">
-		        		<a class="nav-link" href="home.html">Home</a>
+		        		<a class="nav-link" href="home.html" id="mavBHome">Home</a>
 		      		</li>
 		      		<li class="nav-item">
-		        		<a class="nav-link" href="journal.html">Journal</a>
+		        		<a class="nav-link" href="journal.html" id="navBJournal">Journal</a>
 		      		</li>
 		      		<li class="nav-item">
 			        	<a class="nav-link" href="javascript:void(0)">Datacenter</a>
@@ -163,21 +163,24 @@
 
 		<div>
 			<h1 class="title">TradingCenter</h1>
-			<h2>Your center place for ideas and trading data</h2>
+			<h2>Your central place for ideas and trading data</h2>
 		</div>
 		<div class="container">
 			<div class="row justify-content-around">
 				 <div class="col-4">
-      				<a href="journal.html">
-      					<img src="img/gears.png" style="width: 128px; height: 128px;" alt="test">
-      					Journal
+      				<a href="" id="journalImg">
+      					<!--  By Eucalyp -->
+      					<img src="img/journal.png" style="width: 128px; height: 128px;" alt="journal">
       				</a>
+      				<p>Journal</p>
     			</div>
     			<div class="col-4">
       				<a href="datacenter.html">
-      					<img src="img/gears.png" style="width: 128px; height: 128px;" alt="test">
-      					Datacenter
+      					<!--  By Eucalyp -->
+      					<img src="img/datacentre.png" style="width: 128px; height: 128px;" alt="test">
+      					
       				</a>
+      				<p>Datacenter</p>
     			</div>
 			</div>
 		</div>
@@ -192,6 +195,5 @@
 		</script>
 		-->
 
-		<script src="js/test.js" type="text/javascript"></script>
 	</body>
 </html>
