cookie session bugfix

--- a/website/Index.html
+++ b/website/Index.html
@@ -23,7 +23,7 @@
 		        		<a class="nav-link" href="home.html" id="mavBHome">Home</a>
 		      		</li>
 		      		<li class="nav-item">
-		        		<a class="nav-link" href="journal.html" id="navBJournal">Journal</a>
+		        		<a class="nav-link" id="navBJournal">Journal</a>
 		      		</li>
 		      		<li class="nav-item">
 			        	<a class="nav-link" href="javascript:void(0)">Datacenter</a>
@@ -177,7 +177,7 @@
     			<div class="col-4">
       				<a href="datacenter.html">
       					<!--  By Eucalyp -->
-      					<img src="img/datacentre.png" style="width: 128px; height: 128px;" alt="test">
+      					<img src="img/datacentre.png" style="width: 128px; height: 128px;" alt="datacentre">
       					
       				</a>
       				<p>Datacenter</p>
