index title style

--- a/website/Index.html
+++ b/website/Index.html
@@ -161,7 +161,7 @@
 			GDPR info
 		</div>
 
-		<div>
+		<div class="indexTitle">
 			<h1 class="title">TradingCenter</h1>
 			<h2>Your central place for ideas and trading data</h2>
 		</div>
