--- a/website/Index.html
+++ b/website/Index.html
@@ -8,6 +8,7 @@
 		<script src="js/jquery.js" type="text/javascript"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	    <script src="bootstrap-4.1.3/js/bootstrap.min.js" type="text/javascript"></script>
+	    <script src="js/lib.js" type="text/javascript"></script>
 	</head>
 	<body>
 		<nav class="navbar navbar-expand-lg fixed-top">
@@ -194,6 +195,11 @@
 		});
 		</script>
 		-->
-
+		<div w3-include-html="test.html">
+			
+		</div>
+		<script type="text/javascript">
+			includeHTML();
+		</script>
 	</body>
 </html>
