Overhauled the layout
Added a background with transparancy and blur filters,
added parallax

--- a/website/Index.html
+++ b/website/Index.html
@@ -156,33 +156,35 @@
 		</div>
 		<script src="js/header.js" type="text/javascript"></script>
 
+		<div class="parallax">
+		<div id="background" class="parallax__layer parallax__layer--back">
+			<div id="leftPanel" class="showcasePanel">
+			</div>
+			<div id="rightPanel" class="showcasePanel">
+			</div>
+		</div>
+		<div id="divider" class="parallax__layer parallax__layer--back">
+		</div>
+		
+		
+		<div id="content" class="parallax__layer parallax__layer--base">
+			<div id="promo">
+				<div id="promoLeft">
+					<p>Dit is tekst</p>
+				</div>
+				<div id="promoRight">
+					<p>Dit is meer tekst</p>
+				</div>
+			</div>
+			<div id="demoJournal">
+				<img src="https://proxy.duckduckgo.com/iu/?u=http%3A%2F%2Fwww.decoradvisor.net%2Fwp-content%2Fuploads%2F2014%2F01%2Fart-journal.jpg&f=1"/>
+			</div>
+		</div>
+		</div>
+
 		<div id="cookieBanner">
 			<div class="button" id="BAllowCookies">Allow cookies</div>
 			GDPR info
-		</div>
-
-		<div class="indexTitle">
-			<h1 class="title">TradingCenter</h1>
-			<h2>Your central place for ideas and trading data</h2>
-		</div>
-		<div class="container">
-			<div class="row justify-content-around">
-				 <div class="col-4">
-      				<a href="" id="journalImg">
-      					<!--  By Eucalyp -->
-      					<img src="img/journal.png" style="width: 128px; height: 128px;" alt="journal">
-      				</a>
-      				<p>Journal</p>
-    			</div>
-    			<div class="col-4">
-      				<a href="datacenter.html">
-      					<!--  By Eucalyp -->
-      					<img src="img/datacentre.png" style="width: 128px; height: 128px;" alt="datacentre">
-      					
-      				</a>
-      				<p>Datacenter</p>
-    			</div>
-			</div>
 		</div>
 		<script src="js/login.js" type="text/javascript"></script>
 
