--- a/website/search.html
+++ b/website/search.html
@@ -9,174 +9,14 @@
 	    <script src="bootstrap-4.1.3/js/bootstrap.min.js" type="text/javascript"></script>
 	</head>
 	<body>
-		<nav class="navbar navbar-expand-lg fixed-top">
-	  		<a class="navbar-brand" href="#">
-		    	<img src="img/logo.svg" width="30" height="30" class="d-inline-block align-top" alt=""> Tradingcentre
-		  	</a>
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navb" aria-controls="navb" aria-expanded="false" aria-label="Toggle navigation">
-	        	<span class="navbar-toggler-icon"></span>
-	      	</button>
-			<div class="collapse navbar-collapse" id="navb">
-		    	<ul class="nav nav-pills mr-auto">
-		      		<li class="nav-item">
-		        		<a class="nav-link" href="home.html">Home</a>
-		      		</li>
-		      		<li class="nav-item">
-		        		<a class="nav-link" href="journal.html">Journal</a>
-		      		</li>
-		      		<li class="nav-item">
-			        	<a class="nav-link" href="javascript:void(0)">Datacenter</a>
-	      			</li>
-		    	</ul>
-		    	<form class="form-inline my-2 my-lg-0">
-		      		<input class="form-control mr-sm-2" type="text" placeholder="Search" size="50">
-		      		<button class="btn btn-success my-2 my-sm-0" type="button" id="Bsearch">Search</button>
-		    	</form>
-		    	<ul class="nav nav-pills" id="rightButtonNav">
-		    	</ul>
-		  	</div>
-		</nav>
-		<!--Login modal-->
-		<div class="modal fade" id="MLogin" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-	  		<div class="modal-dialog" role="document">
-	    		<div class="modal-content">
-	    			<div class="modal-header">
-				        <h5 class="modal-title">Login</h5>
-				        <button type="button" class="close" id="MLoginBCrosse" aria-label="Close">
-			          		<span aria-hidden="true">&times;</span>
-						</button>
-				    </div>
-		      		<div class="modal-body">
-		      			<form action="Home.html">
-		      				Login
-		      				<br>
-		      				<input type="text" name="username" placeholder="Username" id="MLoginIUsername" autocomplete="off">
-		      				<br>
-		      				Password
-		      				<br>
-		      				<input type="password" name="password" placeholder="Password" id="MLoginIPassword">
-		      				<br>
-		      				<input type="checkbox" name="remimberMe" id="CBremimberMe">
-		      				Remember me
-		      				<p id="MLoginBForgotPassword">Forgot password?</p>
-		      				<p id="MLoginBSingUp">don't have an account?</p>
-		      			</form>
-		      		</div>
-		      		<div class="modal-footer">
-		        		<button type="button" class="btn btn-primary" id="MLoginBLogin">Login</button>
-		        		<button type="button" class="btn btn-secondary" id="MLoginBClose">Close</button>
-		      		</div>
-		    	</div>
-  			</div>
-		</div>
-		<!--Sing up modal-->
-		<div class="modal fade" id="MSignUp" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-	  		<div class="modal-dialog" role="document">
-	    		<div class="modal-content">
-	    			<div class="modal-header">
-				        <h5 class="modal-title">Sign up</h5>
-				        <button type="button" class="close" id="MSignUpBCrosse" aria-label="Close">
-			          		<span aria-hidden="true">&times;</span>
-						</button>
-				    </div>
-		      		<div class="modal-body">
-		      			<form action="Home.html">
-		      				Login
-		      				<br>
-		      				<input type="text" name="username" placeholder="Username" id="MSignUpIUsername" autocomplete="off">
-		      				<br>
-		      				Password
-		      				<br>
-		      				<input type="password" name="password" placeholder="Password" id="MSignUpIPassword">
-		      				<br>
-		      				Re-password
-		      				<br>
-		      				<input type="password" name="password" placeholder="Re-password" id="MSignUpIRePassword">
-		      				<br>
-		      				Email
-		      				<br>
-		      				<input type="text" name="password" placeholder="Email" id="MSignUpIEmail" autocomplete="off">
-		      				<p id="MSingUpBLogin">already have an account?</p>
-		      			</form>
-		      		</div>
-		      		<div class="modal-footer">
-		        		<button type="button" class="btn btn-primary" id="MSignUpBSingUp">Login</button>
-		        		<button type="button" class="btn btn-secondary" id="MSignUpBClose">Close</button>
-		      		</div>
-		    	</div>
-  			</div>
-		</div>
-		<!--Forgot password modal-->
-		<div class="modal fade" id="MForgotPassword" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-	  		<div class="modal-dialog" role="document">
-	    		<div class="modal-content">
-	    			<div class="modal-header">
-				        <h5 class="modal-title">Forgoten password</h5>
-				        <button type="button" class="close" id="MForgotPasswordBCrosse" aria-label="Close">
-			          		<span aria-hidden="true">&times;</span>
-						</button>
-				    </div>
-		      		<div class="modal-body">
-		      			<from action="home.html">
-		      				Username
-		      				<br>
-		      				<input type="text" name="username" id="MForgotPasswordIUsername" placeholder="Username" autocomplete="off">
-		      				<br>
-		      				Email
-		      				<br>
-		      				<input type="text" name="email" id="MForgotPasswordIEmail" placeholder="Email" autocomplete="off">
-		      			</from>
-		      		</div>
-		      		<div class="modal-footer">
-		        		<button type="button" class="btn btn-primary" id="MForgotPasswordBForgotPassword">Login</button>
-		        		<button type="button" class="btn btn-secondary" id="MForgotPasswordBClose">Close</button>
-		      		</div>
-		    	</div>
-  			</div>
-		</div>
+		<header id="header"></header>
+		<script type="text/javascript">includeHTMLFile("header.html",document.getElementById("header"))</script>
 		<script src="js/header.js" type="text/javascript"></script>
-
 		<div id="user">
 			
 		</div>
 		<script src="js/search.js" type="text/javascript"></script>
-		<footer>
-			<div class="container">
-			    <div class="row" id="footertext">
-		            <div class="col-md-4 col-sm-12 col-xs-12">
-			        	<ul class="footer-ul">
-				            <li><h2>ABOUT US</h2></li>
-				            <li><a href="">about us</a></li>
-				            <li><a href="">contact</a></li>
-				            <li><a href="">privacy police</a></li>
-				            <li><a href="">security</a></li>
-				            <li><a href="">FAQ</a></li>
-				            <li><a href="">api</a></li>
-			        	</ul>
-			        </div>
-			        <div class="col-md-4 col-sm-12 col-xs-12">
-				        <ul class="footer-ul">
-				            <li><h2>ACCOUNT</h2></li>
-				            <li><a href="">login</a></li>
-				            <li><a href="">sign up</a></li>
-				        </ul>
-			        </div>
-			        <div class="col-md-4 col-sm-12 col-xs-12">
-				        <ul class="footer-ul">
-				            <li><h2>LINKS</h2></li>
-				            <li><a href="">index</a></li>
-				            <li><a href="">home</a></li>
-				            <li><a href="">journal</a></li>
-				            <li><a href="">datacenter</a></li>
-				        </ul>
-			        </div>
-			    </div>
-			    <div class="row" id="footertext" style="border-top:2px solid #fff;">
-			        <div class="col-md-12 col-sm-12 col-xs-12">
-			        	Tradingcenter&copy;2019 
-			        </div>
-			    </div>
-			</div>
-		</footer>
+		<footer id="footer"></footer>
+		<script type="text/javascript">includeHTMLFile("footer.html",document.getElementById("footer"))</script>
 	</body>
 </html>
