--- a/website/datacenternew.html
+++ b/website/datacenternew.html
@@ -74,7 +74,7 @@
         <div class="row">
         <div class="user-buy col-md-12">
             <h3>Buy data</h3>
-            <input type="submit" value="Buy now 0.5 ETH">
+            <input type="submit" id="ethPrice" value="Buy now 0.5 ETH"> test
         </div>
         </div>
     </nav>
