--- a/website/header.html
+++ b/website/header.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg fixed-top">
-	<a class="navbar-brand" href="#">
+	<!--<a class="navbar-brand" href="#">
     	<img src="img/logo.svg" width="30" height="30" class="d-inline-block align-top" alt=""> Tradingcenter
   	</a>
 	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navb" aria-controls="navb" aria-expanded="false" aria-label="Toggle navigation">
@@ -23,7 +23,11 @@
     	</form>
     	<ul class="nav nav-pills" id="rightButtonNav">
     	</ul>
-  	</div>
+  	</div>!-->
+<a class="navbar-brand" href="Index.html">
+Tradingcenter
+</a>
+    
 </nav>
 <!--buttons modal demo-->
 <!--Login modal-->
