--- a/website/datacenternew.html
+++ b/website/datacenternew.html
@@ -73,7 +73,7 @@
             <input type="submit" value="Buy now 0.5 ETH">
             <button class="btn btn-default btn-create-contract-request" type="button">Amount of contracts created :</button>
             amunt of contracts : <span id="amountOfContracts"></span>
-            <button class="btn btn-default btn-create" type="button">Create a default contract :</buttoamunt of contracts :         <span id="priceEth"></span> in Ether
+            <button class="btn btn-default btn-create-contract" type="button">Create a default contract :</button>
             Creation of contract was : <span id="contractSucces"></span>
         </div>
         </div>
