attempting to contect with datacontract

--- a/website/datacenternew.html
+++ b/website/datacenternew.html
@@ -75,6 +75,8 @@
             amunt of contracts : <span id="amountOfContracts"></span>
             <button class="btn btn-default btn-create-contract" type="button">Create a default contract :</button>
             Creation of contract was : <span id="contractSucces"></span>
+            <button class="btn btn-default btn-contract-price" type="button">Price :</button>
+            <span id="contractPrice"></span>
         </div>
         </div>
     </nav>
