changing password char limits text

--- a/website/header.html
+++ b/website/header.html
@@ -25,7 +25,6 @@
     	</ul>
   	</div>
 </nav>
-<!--buttons modal demo-->
 <!--Login modal-->
 <div class="modal fade" id="MLogin" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
 		<div class="modal-dialog" role="document">
@@ -77,7 +76,7 @@
       				<p class="modalParagraph">Login</p>
       				<input type="text" name="username" placeholder="Username" id="MSignUpIUsername" autocomplete="off">
       				<span class="modalErrorMsg" id="MSignUpEMUsername"></span>
-      				<p class="modalParagraph">Password (between 4 and 20 characters)</p>
+      				<p class="modalParagraph">Password (8 characters or longer)</p>
       				<input type="password" name="password" placeholder="Password" id="MSignUpIPassword">
       				<span class="modalErrorMsg" id="MSignUpEMPassword"></span>
       				<p class="modalParagraph">Re-password</p>
@@ -123,3 +122,4 @@
     	</div>
 		</div>
 </div>
+<script src="js/header.js" type="text/javascript"></script>
