Mostly fixed parallax issues, fixed some layout issues, added some new layout issues.

--- a/website/Index.html
+++ b/website/Index.html
@@ -161,49 +161,49 @@
 
 
 		<div class="parallax">
-		<div id="background" class="parallax__layer parallax__layer--back">
-			<div id="leftPanel" class="showcasePanel">
-			</div>
-			<div id="rightPanel" class="showcasePanel">
-			</div>
-		</div>
-		<div id="divider" class="parallax__layer parallax__layer--back">
-		</div>
-		
-		
-		<div id="promo" class="parallax__layer parallax__layer--base">
-			<div id="promoLeft">
-				<img src="img/journal.png" class="promoLogo">
-				<p class="promoText">Dit is tekst dat van zo'n hoog emotioneel kwaliteit is, dat de gebruiker niet anders kan dan op de knop hieronder te drukken</p>
-				<button class="promoButton" onclick="scrollToJournal()">Journal</button>
-			</div>
-			<div id="promoRight">
-				<img src="img/datacentre.png" class="promoLogo">
-				<p class="promoText">De kwaliteit van deze tekst is nog een stuk hoger; het zou me niet verbazen als het in de geschiedenisboeken bij MacBeth en Lord of the Rings gezet wordt</p>
-				<button class="promoButton" onclick="scrollToDatacenter()">Datacenter</button>
-			</div>
-			<div id="demoJournal" class="demo">
-			<div id="journalLeft" class="demoHalves">
-			</div>
-				<div id="journalRight" class="demoHalves">
+			<div id="background" class="parallax__layer parallax__layer--back">
+				<div id="leftPanel" class="showcasePanel">
+				</div>
+				<div id="rightPanel" class="showcasePanel">
 				</div>
 			</div>
-			<div id="demoDatacenter" class="demo">
-				<div id="datacenterLeft" class="demoHalves">
-				</div>
-				<div id="datacenterRight" class="demoHalves">
-				</div>
+			<div id="divider" class="parallax__layer parallax__layer--back">
 			</div>
-		</div>
-		<div class="parallax__layer parallax__layer--front" >
 			
+			
+			<div id="promo" class="parallax__layer parallax__layer--base">
+				<div id="promoLeft">
+					<img src="img/journal.png" class="promoLogo">
+					<p class="promoText">Dit is tekst dat van zo'n hoog emotioneel kwaliteit is, dat de gebruiker niet anders kan dan op de knop hieronder te drukken</p>
+					<button class="promoButton" onclick="scrollToJournal()">Journal</button>
+				</div>
+				<div id="promoRight">
+					<img src="img/datacentre.png" class="promoLogo">
+					<p class="promoText">De kwaliteit van deze tekst is nog een stuk hoger; het zou me niet verbazen als het in de geschiedenisboeken bij MacBeth en Lord of the Rings gezet wordt</p>
+					<button class="promoButton" onclick="scrollToDatacenter()">Datacenter</button>
+				</div>
+				<div id="demoJournal" class="demo">
+					<div id="journalLeft" class="demoHalves">
+						<p>Hier staat een uitzonderlijk boeiende tekst dat duidelijk uitlegt hoe de journal werkt.</p>
+					</div>
+					<div id="journalRight" class="demoHalves">
+					</div>
+				</div>
+				<div id="demoDatacenter" class="demo">
+					<div id="datacenterLeft" class="demoHalves">
+					</div>
+					<div id="datacenterRight" class="demoHalves">
+						<p>Hier staat een uitzonderlijk boeiende tekst dat duidelijk uitlegt hoe de journal werkt.</p>
+					</div>
+				</div>
+			</div>
 		</div>
-		</div>
-
+		<!--
 		<div id="cookieBanner">
 			<div class="button" id="BAllowCookies">Allow cookies</div>
 			GDPR info
 		</div>
+		-->
 		<script src="js/login.js" type="text/javascript"></script>
 	</body>
 </html>
