fixed creating a new contract with factory
still have a bug  :  Cannot read property 'at' of undefined

--- a/website/contractshow.html
+++ b/website/contractshow.html
@@ -28,10 +28,15 @@
   <button class="btn btn-default btn-contract-buy" type="button">Buy data succesfull?</button>
   <span id="buying-succes"></span><br /><br />
 
+  <button class="btn btn-default btn-contract-addresses" type="button">Adresses : </button>
+  <span id="contract-addresses"></span><br /><br />
+
 
 
 
 </body>
-
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="js/web3.min.js"></script>
+<script src="js/truffle-contract.js"></script>
+<script src="js/app.js"></script>
 </html>
