Added forefround parallax

--- a/website/Index.html
+++ b/website/Index.html
@@ -197,6 +197,12 @@
 					</div>
 				</div>
 			</div>
+			<div class="parallax__layer parallax__layer--front demo">
+				<div id="journalImg">
+				</div>
+				<div id="datacenterImg">
+				</div>
+			</div>
 		</div>
 		<!--
 		<div id="cookieBanner">
