--- a/website/header.html
+++ b/website/header.html
@@ -2,7 +2,7 @@
 <a class="navbar-brand" href="Index.php">
  Tradingcenter
 </a>
-      <span class="navbar-toggler-icon" id="menu" ><i class="fa fa-bars"></i></span>
+      <div class="navbar-toggler-icon" id="menu"><i class="fa fa-bars"></i></div>
 <div class="collapse navbar-collapse" id="navb">
     <div class="header-section-rigth">
 <ul class="navbar-items" id="rightButtonNav" >
