added get from to search.php and fixed small typo

--- a/website/header.html
+++ b/website/header.html
@@ -19,7 +19,7 @@ looks aanpassen vande dropdown menu line : 14-17
     </div>
 </li>
 <div class="search-container">
-<form>
+<form method="GET" action="search.php" id="FSearch">
     <input type="text" placeholder="Search.." name="search">
     <button type="button" id="Bsearch"><i class="fa fa-search"></i></button>
 </form>
@@ -30,7 +30,7 @@ looks aanpassen vande dropdown menu line : 14-17
 <div id="navbar-overlay" class="overlay">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
   <div class="overlay-content" id="rightButtonNav">
-    <a href="home.php">Home</a>
+    <!--<a href="home.php">Home</a>-->
     <a href="journal.php">Journal</a>
       <a href="datacenteroverview.php">Datacenter</a>
 </div>
@@ -68,7 +68,7 @@ looks aanpassen vande dropdown menu line : 14-17
     	</div>
 		</div>
 </div>
-<!--Sing up modal-->
+<!--Sign up modal-->
 <div class="modal fade" id="MSignUp" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
 		<div class="modal-dialog" role="document">
 		<div class="modal-content">
@@ -97,7 +97,7 @@ looks aanpassen vande dropdown menu line : 14-17
       			<!-- </form> -->
       		</div>
       		<div class="modal-footer">
-        		<button type="button" class="btn btn-primary" id="MSignUpBSingUp">Login</button>
+        		<button type="button" class="btn btn-primary" id="MSignUpBSingUp">Sign up</button>
         		<button type="button" class="btn btn-secondary" id="MSignUpBClose">Close</button>
       		</div>
     	</div>
