Revert "fixing typo"
This reverts commit 1d43757f661079429e4f34e4efddeb2fc4c87023.

--- a/website/header.html
+++ b/website/header.html
@@ -58,7 +58,7 @@ looks aanpassen vande dropdown menu line : 14-17
   				<br>
   				<p id="MLoginremember">Remember me<input type="checkbox" name="remimberMe" id="CBremimberMe"></p>
   				<p id="MLoginBForgotPassword">Forgot password?</p>
-  				<p id="MLoginBSignUp">don't have an account?</p>
+  				<p id="MLoginBSingUp">don't have an account?</p>
       			<!--</form>-->
       		</div>
       		<div class="modal-footer">
@@ -92,12 +92,12 @@ looks aanpassen vande dropdown menu line : 14-17
       				<p class="modalParagraph">Email</p>
       				<input type="text" name="password" placeholder="Email" id="MSignUpIEmail" autocomplete="off">
       				<span class="modalErrorMsg" id="MSignUpEMEmail"></span>
-                    <p id="MLoginBSignUp">Accept <a href="">Terms of Service</a><input type="checkbox" name="accept" id="accept"></p>
-      				<p id="MSignUpBLogin">already have an account?</p>
+                    <p id="MLoginBSingUp">Accept <a href="">Terms of Service</a><input type="checkbox" name="accept" id="accept"></p>
+      				<p id="MSingUpBLogin">already have an account?</p>
       			<!-- </form> -->
       		</div>
       		<div class="modal-footer">
-        		<button type="button" class="btn btn-primary" id="MSignUpBSignUp">Sign up</button>
+        		<button type="button" class="btn btn-primary" id="MSignUpBSingUp">Sign up</button>
         		<button type="button" class="btn btn-secondary" id="MSignUpBClose">Close</button>
       		</div>
     	</div>
