removed double id and added extra elements for error handeling

--- a/website/header.html
+++ b/website/header.html
@@ -92,7 +92,8 @@ looks aanpassen vande dropdown menu line : 14-17
       				<p class="modalParagraph">Email</p>
       				<input type="text" name="password" placeholder="Email" id="MSignUpIEmail" autocomplete="off">
       				<span class="modalErrorMsg" id="MSignUpEMEmail"></span>
-                    <p id="MLoginBSignUp">Accept <a href="">Terms of Service</a><input type="checkbox" name="accept" id="accept"></p>
+              <p>Accept <a href="">Terms of Service </a><input type="checkbox" name="accept" id="MSignUpIAccept"></p>
+              <span class="modalErrorMsg" id="MSignUpEMTermsOfService"></span>
       				<p id="MSignUpBLogin">already have an account?</p>
       			<!-- </form> -->
       		</div>
