Created a footer html file
This footer should be included to all web pages. A css and js file have been made as well, but they are included within the html file.
The footer has been added to profile and index, though there are issues with the footer on the index page.

--- a/website/footer.html
+++ b/website/footer.html
@@ -1,36 +1,36 @@
-<div class="container">
+<link rel="stylesheet" href="css/footer.css">
+<div id="footer">
     <div class="row" id="footertext">
         <div class="col-md-4 col-sm-12 col-xs-12">
         	<ul class="footer-ul">
-	            <li><h2>ABOUT US</h2></li>
-	            <li><a href="">about us</a></li>
-	            <li><a href="">contact</a></li>
-	            <li><a href="">privacy police</a></li>
-	            <li><a href="">security</a></li>
-	            <li><a href="">FAQ</a></li>
-	            <li><a href="">api</a></li>
+	            <li><h3>INFORMATION</h3></li>
+	            <li><a href="about.php">about us</a></li>
+	            <li><a href="guides.php">guides</a></li>
+	            <li><a href="faq.php">FAQ</a></li>
         	</ul>
         </div>
         <div class="col-md-4 col-sm-12 col-xs-12">
 	        <ul class="footer-ul">
-	            <li><h2>ACCOUNT</h2></li>
-	            <li><a href="">login</a></li>
-	            <li><a href="">sign up</a></li>
+	            <li><h3>LINKS</h3></li>
+	            <li><a href="index.php">index</a></li>
+	            <li><a href="journal.php">journal</a></li>
+	            <li><a href="datacenternew.php">datacenter</a></li>
+	            <li><a href="boughtdata.php">bought data</a></li>
+	            <li><a href="profile.php">profile</a></li>
 	        </ul>
         </div>
         <div class="col-md-4 col-sm-12 col-xs-12">
 	        <ul class="footer-ul">
-	            <li><h2>LINKS</h2></li>
-	            <li><a href="">index</a></li>
-	            <li><a href="">home</a></li>
-	            <li><a href="">journal</a></li>
-	            <li><a href="">datacenter</a></li>
+	            <li><h3>ACCOUNT</h3></li>
+	            <li><a class="footerSignup">sign up</a></li>
+	            <li><a class="footerSignup">login</a></li>
 	        </ul>
         </div>
     </div>
     <div class="row" id="footertext" style="border-top:2px solid #fff;">
-        <div class="col-md-12 col-sm-12 col-xs-12">
-        	Tradingcenter&copy;2019 
+        <div class="col-md-12 col-sm-12 col-xs-12" id="copyright">
+        	Tradingcenter &copy; 2019 
         </div>
     </div>
+    <script src="js/footer.js"></script>
 </div>
